# message-splitter

./: README.md  __main__.py  app.py  main.py  pyproject.toml
messagesplitter/: __main__.py  application.py  cli.py  gui.py  splitter.py
src/: __main__.py  application.py  cli.py  gui.py  splitter.py  widgets.py
src/tests/: test_application.py  test_cli.py  test_gui.py  test_splitter.py
src/tests/data/: input_text.txt  output_text.txt
