[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-splitter"
version = "0.0.1"
authors = [
  { name="Frederic Üllner", email="fredericuellner@protonmail.com" },
]
description = "app with GUI and CLI for splitting long strings i.e. texts into custom definable chunks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fuellner/message-splitter"
"Bug Tracker" = "https://github.com/fuellner/message-splitter/issues"